EngineeringTycoonErrorsSean.txt
Engineering Tycoon Error Log (for Sean only)

1.  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\EngineeringTycoon.py", line 33
    d
    ^
SyntaxError: EOL while scanning single-quoted string

random 'd' where there should not be

2.Traceback (most recent call last):
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\EngineeringTycoon.py", line 49, in <module>
    robot_code()
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\RobotDecisions.py", line 128, in robot_code
    robot.investment(max_speed_increase, cooling_increase, battery_life_increase, cost)
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\RobotProduction.py", line 22, in investment
    Product.investment(revenue_change, cost)
TypeError: unbound method investment() must be called with Product instance as first argument (got int instance instead)

forgot to define self argument when calling investment method of superclass in Robot subclass

3.Traceback (most recent call last):
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\EngineeringTycoon.py", line 62, in <module>
    print robot.get_budget()
AttributeError: Robot instance has no attribute 'get_budget'

forgot to get rid of calling get_budget when removed from Robot class
4.Traceback (most recent call last):
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\EngineeringTycoon.py", line 50, in <module>
    robot_code()
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\RobotDecisions.py", line 180, in robot_code
    robot.investment(max_speed_increase, cooling_increase, battery_life_increase, cost)
TypeError: investment() takes exactly 3 arguments (5 given)

investment method got deleted in Robot class
Fixed by recreating investment method

5. Try to merge robot-decisions-differentiation branch with master branch but there were conflicting files.
fixed by moving all .pyc files into .gitignore file then resolving conflicts through atom and merging with git shell

6.Traceback (most recent call last):
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\EngineeringTycoon.py", line 67, in <module>
    robot_code()
  File "C:\Users\seant\Documents\GitHub\APCSP-Create-Pong\Pong\RobotDecisions.py", line 182, in robot_code
    if budget <= 0:
NameError: global name 'budget' is not defined

7. Program keeps asking "How many colors should it come in? (Enter a number between 1 and 5)", should only ask once
2 different formats for asking user colors_length --> ran both
deleted 1 so maybe this fixes it?

8.Put opportunities
